<resources>
    <string name="app_name">KadeSubmisiDua</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="detail_league">Detail League</string>
    <string name="goals">Goals</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="red_cards">Red Cards</string>

    <string-array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </string-array>

    <string-array name="id_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>

    <array name="club_image">
        <item>@drawable/img_english_premier_league</item>
        <item>@drawable/img_english_league_1</item>
        <item>@drawable/img_german_bundesliga</item>
        <item>@drawable/img_italian_serie_a</item>
        <item>@drawable/img_french_ligue_1</item>
        <item>@drawable/img_spanish_la_liga</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="league">League</string>
    <string name="favorite_match">Favorite Match</string>
    <string name="liverpool">Liverpool</string>
    <string name="_20">20</string>
    <string name="team_icon">Team Icon</string>
    <string name="team_title">Team Title</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="total">Total</string>
    <string name="teams">Teams</string>
    <string name="todo">TODO</string>
    <string name="list_team">List Team</string>
    <string name="show_match">show Match</string>
</resources>
