<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailTeamActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ProgressBar
            android:id="@+id/activitydetailteam_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/activitydetailteam_iv_team"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/img_spanish_la_liga" />

        <TextView
            android:id="@+id/activitydetailteam_tv_teamtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activitydetailteam_iv_team"
            android:text="@string/liverpool"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/activitydetailteam_tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activitydetailteam_tv_teamtitle"
            android:text="@string/detail_league"
            android:textSize="18sp" />


    </RelativeLayout>

</ScrollView>